Bug 1923697 - Block FEATURE_WEBRENDER_COMPOSITOR on Pascal-architecture NVIDIA GPUs on Windows 10 r=win-reviewers,handyman

With NVIDIA GeForce GTX 1050 Ti, hardware video decoding with WebRender native compositor(with Windows DirectComposition) seemed to have problems in some cases.

Block  FEATURE_WEBRENDER_COMPOSITOR on Pascal-architecture that includes NVIDIA GeForce GTX 1050 Ti.

Differential Revision: https://phabricator.services.mozilla.com/D226093