widget/GfxDriverInfo.h
@@ -159,6 +159,7 @@ enum class DeviceFamily : uint8_t {
   Geforce7300GT,
   Nvidia310M,
   Nvidia8800GTS,
+  NvidiaPascal,
   Bug1137716,
   Bug1116812,
   Bug1155608,
